load("//tools-bazel:library_wrappers.bzl", "java_export", "jvm_junit_test_suite")
load(":generated_test_args.bzl", "per_test_args")
load("@apple_rules_lint//lint:defs.bzl", "package_lint_config")

package_lint_config({
    "java-checkstyle": "//checkstyle:checkstyle_config_coordinator_common",
})

java_export(
    name = "coordinator-common",
    srcs = glob(["src/main/**/*.java"]),
    classifier_artifacts = {
        "test": ":coordinator-common-test-jar",
    },
    maven_coordinates = "org.apache.kafka:kafka-coordinator-common:$(maven_version)",
    neverlink_option = True,
    resources = glob(["src/main/resources/**/*"]),
    tags = ["no-javadocs"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//clients",
        "//metadata",
        "//server-common",
        "//storage",
        "@maven//:com_yammer_metrics_metrics_core",
        "@maven//:org_slf4j_slf4j_api",
    ],
)

java_library(
    name = "coordinator-common-test-jar",
    srcs = glob(["src/test/java/**/*.java"]),
    resources = glob(["src/test/resources/**/*"]),
    tags = [
        "no-java-checkstyle",
        "no-java-spotbugs",
    ],
    deps = [
        ":coordinator-common",
        "//clients",
        "//clients:clients-tests-test-lib",
        "//dependencies:mockito_core",
        "//metadata",
        "//server-common",
        "//server-common:server-common-tests-test-lib",
        "//storage",
        "@maven//:com_yammer_metrics_metrics_core",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_params",
        "@maven//:org_opentest4j_opentest4j",
    ],
)

jvm_junit_test_suite(
    name = "coordinator-common-tests",
    srcs = glob(
        ["src/test/**/*.java"],
    ),
    additional_library_srcs = [
        "src/test/java/org/apache/kafka/coordinator/common/runtime/CoordinatorRuntimeTest.java"
    ],
    per_test_args = per_test_args,
    tags = ["no-java-spotbugs"],
    visibility = ["//visibility:public"],
    runtime_deps = [
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_junit_platform_junit_platform_reporting",
    ],
    deps = [
        ":coordinator-common",
        "//clients",
        "//clients:clients-tests-test-lib",
        "//dependencies:mockito_core",
        "//metadata",
        "//server-common",
        "//server-common:server-common-tests-test-lib",
        "//storage",
        "@maven//:com_yammer_metrics_metrics_core",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_params",
        "@maven//:org_opentest4j_opentest4j",
    ],
)