load("@apple_rules_lint//lint:defs.bzl", "package_lint_config")
load("//tools-bazel:library_wrappers.bzl", "java_export", "java_library", "jvm_junit_test_suite")
load("//tools-bazel:message_generator.bzl", "message_generator")
load(":generated_test_args.bzl", "per_test_args")

package_lint_config({
    "java-checkstyle": "//checkstyle:checkstyle_config_group_coordinator",
})

message_generator(
    name = "generated",
    srcs = glob(["src/main/resources/common/message/**/*.json"]),
    args = [
        "-p",
        "org.apache.kafka.coordinator.group.generated",
        "-o",
        "generated/srcs",
        "-i",
        "group-coordinator/src/main/resources/common/message",
        "-m",
        "MessageDataGenerator",
        "JsonConverterGenerator",
    ],
)

java_export(
    name = "group-coordinator",
    srcs = glob(["src/main/**/*.java"]) + [":generated"],
    classifier_artifacts = {
        "test": ":group-coordinator-test-jar",
    },
    maven_coordinates = "org.apache.kafka:kafka-group-coordinator:$(maven_version)",
    neverlink_option = True,
    resources = glob(["src/main/resources/**/*"]),
    tags = ["no-javadocs"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//clients",
        "//coordinator-common",
        "//group-coordinator/group-coordinator-api",
        "//metadata",
        "//server-common",
        "//storage",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_fasterxml_jackson_datatype_jackson_datatype_jdk8",
        "@maven//:com_yammer_metrics_metrics_core",
        "@maven//:org_hdrhistogram_HdrHistogram",
        "@maven//:org_slf4j_slf4j_api",
    ],
)

java_library(
    name = "group-coordinator-test-jar",
    srcs = glob(["src/test/java/**/*.java"]) + [":generated"],
    resources = glob(["src/test/resources/**/*"]),
    tags = [
        "no-java-checkstyle",
        "no-java-spotbugs",
    ],
    deps = [
        ":group-coordinator",
        "//clients",
        "//clients:clients-tests-test-lib",
        "//coordinator-common",
        "//coordinator-common:coordinator-common-tests-test-lib",
        "//dependencies:mockito_core",
        "//group-coordinator/group-coordinator-api",
        "//metadata",
        "//server-common",
        "//server-common:server-common-tests-test-lib",
        "//storage",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_yammer_metrics_metrics_core",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_params",
        "@maven//:org_opentest4j_opentest4j",
    ],
)

jvm_junit_test_suite(
    name = "group-coordinator-tests",
    srcs = glob(
        ["src/test/**/*.java"],
    ),
    additional_library_srcs = [
        "src/test/java/org/apache/kafka/coordinator/group/GroupConfigManagerTest.java",
        "src/test/java/org/apache/kafka/coordinator/group/GroupCoordinatorConfigTest.java",
        "src/test/java/org/apache/kafka/coordinator/group/GroupCoordinatorRecordHelpersTest.java",
        "src/test/java/org/apache/kafka/coordinator/group/GroupMetadataManagerTest.java",
    ],
    per_test_args = per_test_args,
    tags = ["no-java-spotbugs"],
    visibility = ["//visibility:public"],
    runtime_deps = [
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_junit_platform_junit_platform_reporting",
    ],
    deps = [
        ":group-coordinator",
        "//clients",
        "//clients:clients-tests-test-lib",
        "//coordinator-common",
        "//coordinator-common:coordinator-common-tests-test-lib",
        "//dependencies:mockito_core",
        "//group-coordinator/group-coordinator-api",
        "//metadata",
        "//server-common",
        "//server-common:server-common-tests-test-lib",
        "//storage",
        "@maven//:com_yammer_metrics_metrics_core",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_params",
        "@maven//:org_opentest4j_opentest4j",
    ],
)
