load("@rules_pkg//pkg:mappings.bzl", "pkg_attributes", "pkg_files", "strip_prefix")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

pkg_files(
    name = "licenses",
    srcs = glob(
        ["**/*"],
        exclude = ["BUILD.bazel"],
    ),
    attributes = pkg_attributes(
        gid = 0,
        group = "root",
        mode = "0644",
        uid = 0,
        user = "root",
    ),
    prefix = "licenses",
    strip_prefix = strip_prefix.from_pkg(),
    visibility = ["//:__subpackages__"],
)
