load("@apple_rules_lint//lint:defs.bzl", "package_lint_config")
load("//tools-bazel:library_wrappers.bzl", "java_export", "java_library", "jvm_junit_test_suite")
load("//tools-bazel:message_generator.bzl", "message_generator")
load(":generated_test_args.bzl", "per_test_args")

package_lint_config({
    "java-checkstyle": "//checkstyle:checkstyle_config_metadata",
})

message_generator(
    name = "generated",
    srcs = glob(["src/main/resources/common/metadata/**/*.json"]),
    args = [
        "-p",
        "org.apache.kafka.common.metadata",
        "-o",
        "generated/srcs",
        "-i",
        "metadata/src/main/resources/common/metadata",
        "-m",
        "MessageDataGenerator",
        "JsonConverterGenerator",
        "-t",
        "MetadataRecordTypeGenerator",
        "MetadataJsonConvertersGenerator",
    ],
)

java_export(
    name = "metadata",
    srcs = glob(["src/main/**/*.java"]) + [":generated"],
    classifier_artifacts = {
        "test": ":metadata-test-jar",
    },
    maven_coordinates = "org.apache.kafka:kafka-metadata:$(maven_version)",
    neverlink_option = True,
    resources = glob(["src/main/resources/**/*"]),
    tags = ["no-javadocs"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//clients",
        "//raft",
        "//server-common",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_fasterxml_jackson_datatype_jackson_datatype_jdk8",
        "@maven//:com_yammer_metrics_metrics_core",
        "@maven//:io_opentelemetry_opentelemetry_api",
        "@maven//:io_opentelemetry_opentelemetry_context",
        "@maven//:org_slf4j_slf4j_api",
    ],
)

java_library(
    name = "metadata-test-jar",
    srcs = glob(["src/test/java/**/*.java"]),
    resources = glob(["src/test/resources/**/*"]),
    tags = [
        "no-java-checkstyle",
        "no-java-spotbugs",
    ],
    deps = [
        ":metadata",
        "//clients",
        "//clients:clients-tests-test-lib",
        "//dependencies:mockito_core",
        "//raft",
        "//raft:raft-tests-test-lib",
        "//server-common",
        "//server-common:server-common-tests-test-lib",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_yammer_metrics_metrics_core",
        "@maven//:io_opentelemetry_opentelemetry_api",
        "@maven//:io_opentelemetry_opentelemetry_context",
        "@maven//:net_jqwik_jqwik_api",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_params",
        "@maven//:org_slf4j_slf4j_api",
    ],
)

jvm_junit_test_suite(
    name = "metadata-tests",
    srcs = glob(["src/test/**/*.java"]),
    additional_library_srcs = [
        "src/test/java/org/apache/kafka/controller/ConfigurationControlManagerTest.java",
        "src/test/java/org/apache/kafka/image/AclsImageTest.java",
        "src/test/java/org/apache/kafka/image/ClientQuotasImageTest.java",
        "src/test/java/org/apache/kafka/image/ClusterImageTest.java",
        "src/test/java/org/apache/kafka/image/ConfigurationsImageTest.java",
        "src/test/java/org/apache/kafka/image/DelegationTokenImageTest.java",
        "src/test/java/org/apache/kafka/image/FeaturesImageTest.java",
        "src/test/java/org/apache/kafka/image/MetadataImageTest.java",
        "src/test/java/org/apache/kafka/image/ProducerIdsImageTest.java",
        "src/test/java/org/apache/kafka/image/ScramImageTest.java",
        "src/test/java/org/apache/kafka/image/TopicsImageTest.java",
        "src/test/java/org/apache/kafka/metadata/authorizer/StandardAclTest.java",
        "src/test/java/org/apache/kafka/metadata/authorizer/StandardAclWithIdTest.java",
        "src/test/java/org/apache/kafka/metadata/authorizer/StandardAuthorizerTest.java",
        "src/test/java/org/apache/kafka/metadata/placement/PartitionAssignmentTest.java",
        "src/test/java/org/apache/kafka/metadata/storage/ScramParserTest.java",
    ],
    per_test_args = per_test_args,
    tags = ["no-java-spotbugs"],
    visibility = ["//visibility:public"],
    runtime_deps = [
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_junit_platform_junit_platform_reporting",
    ],
    deps = [
        ":metadata",
        "//clients",
        "//clients:clients-tests-test-lib",
        "//dependencies:mockito_core",
        "//raft",
        "//raft:raft-tests-test-lib",
        "//server-common",
        "//server-common:server-common-tests-test-lib",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_yammer_metrics_metrics_core",
        "@maven//:io_opentelemetry_opentelemetry_api",
        "@maven//:io_opentelemetry_opentelemetry_context",
        "@maven//:net_jqwik_jqwik_api",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_params",
        "@maven//:org_slf4j_slf4j_api",
    ],
)
