load("@apple_rules_lint//lint:defs.bzl", "package_lint_config")
load("//tools-bazel:library_wrappers.bzl", "java_export", "java_library", "jvm_junit_test_suite")
load(":generated_test_args.bzl", "per_test_args")

package_lint_config({
    "java-checkstyle": "//checkstyle:checkstyle_config_server_common",
})

java_export(
    name = "server-common",
    srcs = glob(["src/main/**/*.java"]),
    classifier_artifacts = {
        "test": ":server-common-test-jar",
    },
    enable_test_jar_copy = True,
    maven_coordinates = "org.apache.kafka:kafka-server-common:$(maven_version)",
    neverlink_option = True,
    resources = ["//:version_file"],
    runtime_deps_exclude = [
        "//clients",
    ],
    tags = ["no-javadocs"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//clients",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_fasterxml_jackson_datatype_jackson_datatype_jdk8",
        "@maven//:com_yammer_metrics_metrics_core",
        "@maven//:io_opentelemetry_opentelemetry_api",
        "@maven//:io_opentelemetry_opentelemetry_context",
        "@maven//:net_sf_jopt_simple_jopt_simple",
        "@maven//:org_pcollections_pcollections",
        "@maven//:org_slf4j_slf4j_api",
    ],
)

java_library(
    name = "server-common-test-jar",
    srcs = glob(["src/test/java/**/*.java"]),
    resources = glob(["src/test/resources/**/*"]),
    tags = [
        "no-java-checkstyle",
        "no-java-spotbugs",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        ":server-common",
        "//clients",
        "//clients:clients-tests-test-lib",
        "//dependencies:mockito_core",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_yammer_metrics_metrics_core",
        "@maven//:io_opentelemetry_opentelemetry_api",
        "@maven//:io_opentelemetry_opentelemetry_context",
        "@maven//:net_sf_jopt_simple_jopt_simple",
        "@maven//:org_hamcrest_hamcrest",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_params",
        "@maven//:org_pcollections_pcollections",
        "@maven//:org_slf4j_slf4j_api",
    ],
)

jvm_junit_test_suite(
    name = "server-common-tests",
    srcs = glob(["src/test/**/*.java"]),
    additional_library_srcs = [
        "src/test/java/org/apache/kafka/server/util/DeadlineTest.java",
        "src/test/java/org/apache/kafka/server/util/FutureUtilsTest.java",
        "src/test/java/org/apache/kafka/timeline/TimelineHashMapTest.java",
        "src/test/java/org/apache/kafka/timeline/TimelineHashSetTest.java",
    ],
    per_test_args = per_test_args,
    tags = ["no-java-spotbugs"],
    visibility = ["//visibility:public"],
    runtime_deps = [
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_junit_platform_junit_platform_reporting",
    ],
    deps = [
        ":server-common",
        "//clients",
        "//clients:clients-tests-test-lib",
        "//dependencies:mockito_core",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_yammer_metrics_metrics_core",
        "@maven//:io_opentelemetry_opentelemetry_api",
        "@maven//:io_opentelemetry_opentelemetry_context",
        "@maven//:net_sf_jopt_simple_jopt_simple",
        "@maven//:org_hamcrest_hamcrest",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_params",
        "@maven//:org_pcollections_pcollections",
        "@maven//:org_slf4j_slf4j_api",
    ],
)
